# tsilva-notebook-utils

./: .archived.md  .bumpversion.cfg  .env.example  .gitignore  CLAUDE.md  Makefile  README.md  bump_version.py  codecov.yml  example_last_obs_usage.py  publish.py  pyproject.toml  requirements.txt  run_tests.sh  setup.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish-to-pypi.yml  publish.yml  release.yml  tests.yml
tests/: test_gymnasium.py
tsilva_notebook_utils/: __init__.py  colab.py  datasets.py  github.py  google_colab.py  gpu.py  gymnasium.py  huggingface.py  lightning.py  misc.py  notebook.py  notifications.py  numpy.py  openrouter.py  plots.py  popdesk.py  torch.py  video.py  wandb.py
