[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tsilva_notebook_utils"
version = "0.0.106"
description = "Utility functions for Jupyter/Colab notebooks"
authors = [
    {name = "Tiago Silva"}
]
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    "ipython>=7.0.0",
    "opencv-python>=4.0.0",
    "imageio>=2.0.0",
    "numpy>=1.19.0",
    "tqdm>=4.0.0",
    "python-dotenv",
    "huggingface_hub",
    "pynvml",
    "bokeh",
    "scikit-learn",
    "datasets",
    "pytorch-lightning"
]

[tool.hatch.build.targets.wheel]
packages = ["tsilva_notebook_utils"]

[tool.hatch.publish.index]
url = "https://upload.pypi.org/legacy/"
token = "env:PYPI_TOKEN"
