[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tsilva_notebook_utils"
version = "0.0.119"
description = "Utility functions for Jupyter/Colab notebooks"
authors = [
    {name = "Tiago Silva"}
]
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    "ipython>=7.0.0",
    "opencv-python>=4.0.0",
    "imageio>=2.0.0",
    "numpy>=1.19.0",
    "tqdm>=4.0.0",
    "python-dotenv",
    "huggingface_hub",
    "pynvml",
    "bokeh",
    "scikit-learn",
    "datasets",
    "pytorch-lightning"
]

[project.optional-dependencies]
colab = [
    "google-colab",
    "python-dotenv",
    "tqdm"
]
datasets = [
    "datasets",
    "Pillow",
    "torch",
    "torchvision"
]
github = [
    "requests"
]
gymnasium = [
    "imageio",
    "numpy",
    "pytorch-lightning",
    "torch",
    "wandb",
    "Pillow",
    "stable-baselines3"
]
huggingface = [
    "huggingface_hub",
    "torch"
]
lightning = [
    "pytorch-lightning",
    "torch",
    "torchvision",
    "Pillow"
]
notifications = [
    "requests"
]
openrouter = [
    "openai"
]
plots = [
    "matplotlib",
    "seaborn",
    "umap-learn",
    "bokeh",
    "Pillow",
    "scikit-learn",
    "torch"
]
torch = [
    "torch",
    "torchvision",
    "Pillow",
    "numpy"
]
video = [
    "opencv-python",
    "imageio-ffmpeg",
    "torch",
    "torchvision"
]
wandb = [
    "wandb",
    "torch"
]

all = [
    "google-colab",
    "python-dotenv",
    "tqdm",
    "datasets",
    "Pillow",
    "torch",
    "torchvision",
    "requests",
    "imageio",
    "numpy",
    "pytorch-lightning",
    "wandb",
    "stable-baselines3",
    "huggingface_hub",
    "matplotlib",
    "seaborn",
    "umap-learn",
    "bokeh",
    "scikit-learn",
    "opencv-python",
    "imageio-ffmpeg",
    "openai"
]

[tool.hatch.build.targets.wheel]
packages = ["tsilva_notebook_utils"]

[tool.hatch.publish.index]
url = "https://upload.pypi.org/legacy/"
token = "env:PYPI_TOKEN"
